--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -1,23 +1,48 @@
 ---
-- name: apt update
+- name: Update repositories cache and 
   apt:
-   update_cache: yes
+    update_cache: yes
 
-- name: get nginx package signing key
-  get_url: 
-    url: http://nginx.org/keys/nginx_signing.key
-    dest: /var/keys/nginx_signing.key
-  register: result
+- name: Add an Apt signing key, uses whichever key is at the URL
+  apt_key:
+    url: https://nginx.org/keys/nginx_signing.key
+    state: present
 
-- name: add nginx apt-key
-  command: apt-key add '/var/keys/nginx_signing.key'
-  when: result.changed
+- name: Add repository for nginx
+  apt_repository:
+    repo: deb http://nginx.org/packages/ubuntu/ lucid nginx
+    state: present
 
-- name: install nginx
-  get_url:
-   url: https://nginx.org/packages/mainline/ubuntu/ focal nginx
-   state: present
-   
+- name: install nginx 
+  apt:
+    name: nginx
+    state: present
+
+- name: Enable nginx
+  systemd:
+    name: nginx
+    state: started
+    enabled: yes
+
+- name:  allow port 22
+  community.general.ufw:
+    rule: allow
+    port: '22'
+    proto: tcp
+
+- name: deny everything and enable UFW
+  ufw:
+    state: enabled
+    policy: deny
+
+- name: Allow 80,443 for nginx
+  community.general.ufw:
+    rule: allow
+    port: '{{ item }}'
+  loop:
+    - 80
+    - 443
+    
 - name: show version nginx
   shell: 
    cmd: nginx -v
