complete install nginx & keepalived

--- a/nginx.yml
+++ b/nginx.yml
@@ -1,6 +1,6 @@
 ---
-- name: nginxCluster
-  host: nginxCluster
+- name: keepalive
+  hosts: nginxCluster
   become: true
   roles:
-     nginx
+    - nginx
