--- a/roles/nginx/files/nginx.conf
+++ b/roles/nginx/files/nginx.conf
@@ -1,7 +1,7 @@
 server { # simple load balancing
     listen          80;
     server_name     big.server.com;
-    access_log      logs/big.server.access.log main;
+    access_log      /var/log/nginx/big.server.log main;
 
     location / {
       proxy_pass      http://google.com;
